--- a/templates/mandates_list.html
+++ b/templates/mandates_list.html
@@ -112,6 +112,8 @@
                             <i class="fas fa-battery-three-quarters" style="font-size: 100%;
                         {% elif "VICE_RECTOR" in review.reviewer.role %}
                             <i class="fas fa-battery-full" style="font-size: 100%;
+                        {% else %}
+                            <i id="rev" class="fas fa-battery-quarter" style="font-size: 100%;
                         {% endif %}
                         {% if review.advice == "FAVORABLE" %}
                              color: #79C84F;"
