[RC 19.11.1] do not display spinner on file ddl 	modified:   templates/assistant_form_part3.html 	modified:   templates/assistant_form_part4.html 	modified:   templates/assistant_mandates.html 	modified:   templates/manager_assistant_form_view.html 	modified:   templates/manager_home.html 	modified:   templates/mandate_learning_unit_list.html 	modified:   templates/pst_form_view.html 	modified:   templates/reviewer_mandates_list.html

--- a/templates/pst_form_view.html
+++ b/templates/pst_form_view.html
@@ -240,7 +240,7 @@
                     <ul>
                         {% for file in phd_files %}
                             <li>
-                                <a href="{% url 'assistant_file_download' document_file_id=file.id %}">
+                                <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">
                                     {{ file.document_file }}</a>
                             </li>
                         {% endfor %}
@@ -312,7 +312,7 @@
                     <ul>
                         {% for file in research_files %}
                         <li>
-                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}">
+                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">
                                 {{ file.document_file }}</a>
                         </li>
                         {% endfor %}
@@ -392,7 +392,7 @@
                 <ul>
                     {% for file in tutoring_files %}
                         <li>
-                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}">
+                            <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">
                                 {{ file.document_file }}</a>
                         </li>
                     {% endfor %}
