[RC 19.11.1] rephrase sentence 	modified:   locale/en/LC_MESSAGES/django.po 	modified:   locale/fr_BE/LC_MESSAGES/django.po 	modified:   templates/assistant_form_part3.html 	modified:   templates/manager_assistant_form_view.html 	modified:   templates/pst_form_view.html

--- a/templates/assistant_form_part3.html
+++ b/templates/assistant_form_part3.html
@@ -95,7 +95,7 @@
         </div>
         <div class="form-group">
 			<label for="confirmatory_test_date">{% trans 'Date of confirmation test' %}
-				{% trans '(for the 2nd renewal)' %}</label>
+				{% trans '(starting the 2nd renewal)' %}</label>
 			{{ form.confirmation_test_date }}
 			<span class="error">{{ form.confirmation_test_date.errors }}</span>
         </div>
