--- a/templates/pst_form_view.html
+++ b/templates/pst_form_view.html
@@ -215,7 +215,7 @@
                 </div>
                 <div class="row" style="padding-top: 2px;">
                     <div class="col-md-3">
-                        {% trans 'Date of confirmation test' %}<h6>{% trans '(for the 2nd renewal)' %}</h6>
+                        {% trans 'Date of confirmation test' %}<h6>{% trans '(starting the 2nd renewal)' %}</h6>
                     </div>
                     <div class="col-md-9">
                         {{ assistant.confirmation_test_date|default_if_none:"n/a" }}
