OA-1 optimize import + remove unused css class on template 	modified:   templates/reviewers_list.html 	modified:   views/mandates_list.py

--- a/templates/reviewers_list.html
+++ b/templates/reviewers_list.html
@@ -41,7 +41,7 @@
             {% csrf_token %}
             {{ reviewers_formset.management_form }}
         <div class="table-responsive">
-        <table id="myTable" class="table table-hover table-condensed table-bordered" cellspacing="0" width="100%">
+        <table id="myTable" class="table table-hover table-condensed table-bordered">
         <thead>
         <tr>
         <th>{% trans 'Name' %}</th>
