Extract base_list template
	modified:   templates/assistant/base_list.html
	new file:   templates/assistant/reviewers_list.html
	deleted:    templates/reviewers_list.html
	modified:   tests/views/test_mandates_list.py
	modified:   tests/views/test_reviewers_management.py
	modified:   views/reviewers_management.py

--- a/templates/assistant/base_list.html
+++ b/templates/assistant/base_list.html
@@ -47,6 +47,8 @@
                 </div>
             </div>
             <div class="table-responsive">
+                {% block pre_table %}
+                {% endblock pre_table %}
                 <table id="myTable" class="table table-hover table-condensed table-bordered" role="presentation">
                     <thead>
                     <tr>
@@ -65,6 +67,8 @@
                     {% endfor %}
                     </tbody>
                 </table>
+                {% block post_table %}
+                {% endblock post_table %}
             </div>
         </div>
     </div>
