--- a/templates/manager_add_reviewer.html
+++ b/templates/manager_add_reviewer.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% load static %}
-{% load i18n %}
+{% load static i18n %}
+{% load bootstrap3 %}
 
 {% comment "License" %}
 * OSIS stands for Open Student Information System. It's an application
@@ -25,16 +25,13 @@
 * at the root of the source code of this program.  If not,
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
-{% block style %}
-<link rel="stylesheet" href="{% static 'css/custom.css' %}">
-<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
-{% endblock %}
+
 {% block breadcrumb %}
 <li><a href="{% url 'manager_home' %}" id="lnk_manager_home">{% trans 'Assistants' %}</a></li>
 <li><a href="{% url 'reviewers_list' %}" id="lnk_reviewers_list">{% trans 'Reviewers' %}</a></li>
 <li class="active">{% trans 'Add' %}</li>
 {% endblock %}
+
 {% block content %}
 <div class="page-header">
     <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
@@ -42,54 +39,22 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <form method="POST" action="{% url 'reviewer_add' %}">
-        {{ form.non_field_errors }}
- 		    {% csrf_token %}
- 		    {% for hidden in form.hidden_fields %}
-			    {{ hidden }}
-		    {% endfor %}
-	    <div class="form-group">
-		    <label for="search_persons">{% trans 'Person' %}</label>
-			<input id="search_persons" name="search_persons" size="100" class="form-control"
-										  placeholder="{% trans 'Search by email or last name' %}" required>
-			<input type="hidden" name="person_id" id="person_id">
-		</div>
-		<div class="form-group">
-			<label for="{{ form.entity.auto_id }}">{% trans 'Entity' %}</label>
-			{{ form.entity }}<span class="error">{{ form.entity.errors }}</span>
-		</div>
-		<div class="form-group">
-			<label for="{{ form.role.auto_id }}">{% trans 'Role' %}</label>
-			{{ form.role }}<span class="error">{{ form.role.errors }}</span>
-		</div>
-		<input type="hidden" name="reviewer_id" id="reviewer.id" value="{{ reviewer.id }}">
-		<button type="submit" class="btn btn-primary" title="{% trans 'Save'%}" id="bt_add_reviewer_save"
-				onclick="return confirm('{% trans 'Are you sure you want to add this reviewer? This action is irreversible.' %}')">
-			<span class="far fa-save" aria-hidden="true"></span> {% trans 'Save'%}</button>
-			<a class="btn btn-default" id="lnk_upload_cancel" href="{% url 'reviewers_list' %}">
-				<span class="fas fa-times" aria-hidden="true"></span> {% trans 'Cancel'%}</a>
+            {% csrf_token %}
+            {% bootstrap_form_errors form %}
+
+            {% bootstrap_field form.person %}
+            {% bootstrap_field form.entity %}
+            {% bootstrap_field form.role %}
+
+            <button type="submit" class="btn btn-primary" title="{% trans 'Save'%}" id="bt_add_reviewer_save">
+                <span class="far fa-save" aria-hidden="true"></span> {% trans 'Save'%}
+            </button>
+            <a class="btn btn-default" id="lnk_upload_cancel" href="{% url 'reviewers_list' %}">
+                <span class="fas fa-times" aria-hidden="true"></span> {% trans 'Cancel'%}
+            </a>
     	</form>
+        {{ form.media }}
     </div>
 </div>
 {% endblock %}
-{% block script %}
-<script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
-<script>
-window.onload = function() {
-    $('#person_id').empty();
-};
-$(function() {
-  $("#search_persons").autocomplete({
-	source: "/assistants/api/get_persons/",
-    minLength: 3,
-    delay: 100,
-    select: function(event, ui) {
-    	var person_id = ui.item.id;
-    	$( "#person_id" ).val(person_id);
-    	$( "#search_persons" ).val( ui.item.first_name + ', ' + ui.item.last_name + ' (' + ui.item.value + ')' );
-    	$('#id_structure').focus();
-    	return False;
-    	}
-  });
-});
-</script>
-{% endblock %}
+
